# interface-check

./: .dockerignore  .editorconfig  .env  .gitignore  .pre-commit-config.yml  .roomodes  .~lock.test.xlsx#  AGENTS.md  AmazonQ.md  CHANGELOG.md  CONFIGURATION_GUIDE.md  CONTRIBUTING.md  Dockerfile  IMPROVEMENTS_ACHIEVED.md  LICENSE  PLATFORM_CLASS_SUMMARY.md  PROMPT.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_IMPROVEMENTS.md  REFACTORING_SUMMARY.md  TODO.md  TODO.txt  TRAFFIC_FIX.md  Taskfile.yaml  build_binary.sh  config.json  create_binary.sh  create_binary_traffic.sh  demo_refactoring.py  docker-compose.yml  example_usage.py  info.txt  main.py  main2.py  main3.py  main4.py  main5.py  main6.py  main_eye_cfg.json  (+16 more)
.amazonq/cli-agents/: superman.json
.amazonq/rules/: learn.md  python-best-practices.qdrules.json  python_rules.md
.github/workflows/: lint.yml
.kiro/agents/: aws-rust-agent.json  backend-dev.json  code-monkey-python.json  code-monkey-rust.json  code-review-agent.json  code-review.json  code-reviewer.json  development-workflow-agent.json  devops-infrastructure.json  documentation-specialist.json  domain-finder-agent.json  domain-finder.json  frontend-dev.json  hook-tester.json  my-code-monkey-python.json  network-diagnostic-guru.json  network-diagnostics-agent.json  network-diagnostics.json  project-planner-git-workflows.json  project-test-runner.json  ssh-connection-expert.json  test-dev.json  test-runner.json
.kiro/hooks/: accessibility-audit.kiro.hook  api-schema-validation.kiro.hook  auto-test-on-save.kiro.hook  cdk-synth-on-change.kiro.hook  code-coverage-check.kiro.hook  commit-message-helper.kiro.hook  dependency-update-check.kiro.hook  env-file-validation.kiro.hook  generate-rust-tests.kiro.hook  generate-tests.kiro.hook  lint-and-format-on-save.kiro.hook  mcp-config-validation.kiro.hook  mcp-server-test.kiro.hook  performance-analysis.kiro.hook  readme-spell-check.kiro.hook  security-scan-on-dependency-change.kiro.hook  test.kiro.hook  translation-update.kiro.hook  update-documentation.kiro.hook  validate-docker-on-change.kiro.hook
.kiro/prompts/: documentation-specialist.md  network-diagnostic-guru.md  project-build.md  project-format.md  project-init.md  project-planner-git-workflow.md  project-update.md  rust-expert.md
.kiro/research/: 2026-01-12__code-performance-optimization-research.md  2026-01-12__code-quality-best-practices-research.md  2026-01-12__devcontainer-best-practices-research.md  2026-01-12__development-standards-best-practices-research.md  2026-01-12__docker-best-practices-research.md  2026-01-12__error-handling-best-practices-research.md  2026-01-12__git-best-practices-research.md  2026-01-12__mcp-best-practices-research.md  2026-01-12__python-best-practices-research.md  2026-01-12__ralph-wiggum-ai-coding-loop.md  2026-01-12__rust-best-practices-research.md  2026-01-12__security-best-practices-research.md  2026-01-12__testing-best-practices-research.md  2026-01-12__threading-best-practices-research.md  2026-01-12__ui-development-best-practices-research.md
.kiro/settings/: cli.json  lsp.json  mcp.json
.kiro/steering/: AGENTS.md  Research_analyze.md  agents-reference.md  api-designer_best-practices.md  api-designer_patterns.md  architecture-best-practices.md  architecture-development_best-practices.md  architecture-development_patterns.md  architecture-patterns.md  code-opt-perf-best-practices.md  code-performance-optimization_best-practices.md  code-performance-optimization_patterns.md  code-quality-best-practices.md  code-quality-standards.md  code-quality_best-practices.md  code-quality_patterns.md  configuration-patterns.md  data-analysis-patterns.md  dev-std-best-practices.md  devcontainer-best-practices.md  devcontainer_best-practices.md  devcontainer_patterns.md  development-standards.md  development-standards_best-practices.md  development-standards_patterns.md  docker-best-practices.md  docker_best-practices.md  docker_patterns.md  error-best-practices.md  error-handling-patterns.md  error-handling_best-practices.md  error-handling_patterns.md  file-title.md  file-version.md  git-best-practices.md  git_best-practices.md  git_patterns.md  guidelines.md  interface-check_analyze.md  kiro-cli-documentation_analyze.md  (+52 more)
docs/: AWS.md  AmazonQ.md  CONFIGURATION_GUIDE.md  CONFIG_EXTRACTION.md  CONTRIBUTING.md  EYE_SCAN_IMPROVEMENTS.md  LOGMSG_AUDIT.md  NAMING_INCONSISTENCIES.md  PER_WORKER_SSH_CONNECTIONS.md  README.md  REFACTORING_PHASE1.md  REFACTORING_PHASE2.md  REFACTORING_SUMMARY.md  ROTATION_INVESTIGATION.md  TRAFFIC_TESTING.md  TRAFFIC_VALIDATION.md  api-designer_best-practices.md  api-designer_patterns.md  architecture-development_best-practices.md  architecture-development_patterns.md  code-performance-optimization_best-practices.md  code-performance-optimization_patterns.md  code-quality_best-practices.md  code-quality_patterns.md  devcontainer_best-practices.md  devcontainer_patterns.md  development-standards_best-practices.md  development-standards_patterns.md  docker_best-practices.md  docker_patterns.md  error-handling_best-practices.md  error-handling_patterns.md  git_best-practices.md  git_patterns.md  mcp_best-practices.md  mcp_patterns.md  network-diagnostics_best-practices.md  network-diagnostics_patterns.md  network_agent.md  nicegui-development_best-practices.md  (+26 more)
examples/: tool_usage.py
prompts/agents/: test-dev.md
rules/: python_rules.md
scripts/: extract_topics.sh  format_project.sh  hello.py  reload_drivers.sh  research.py
scripts/87/: ericai_to_openai.py  run_comfyui.sh  run_ericai_openai.sh  run_ericai_proxy.sh  run_litellm_proxy.sh
scripts/litellm_tasks/: gather_templates.py  main_template.yaml  merge_templates.py
scripts/local_tasks/: project_report.py  run_project_report.sh
scripts/research-steering/: research.py
scripts/system/: research_steering.py
src/: app.py  app_refactored.py  process_manager.py  refactored_main.py
src/adapters/: __init__.py  collector_adapter.py  (+1 more)
tests/: execute_test.py  test_research_steering.py  test_statistics.py  test_time_parser.py
(+328 files in other folders)
