#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"

[project]
name = "python-template"
version = "0.1.0"
description = "Python template project"
authors = [{ name = "Mattias Keva", email = "mattias.keva@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "pydantic",
    "pydantic-settings",
    "keyboard>=0.13.5",
    "nicegui>=2.24.1",
    "pip-licenses>=5.0.0",
    "paramiko>=4.0.0",
    "python-dotenv>=1.1.1",
    "plotly>=6.3.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

#[tool.hatch.build.targets.wheel]
#include = ["loggerlib/**"]

[tool.uv]
dev-dependencies = [
    "ruff",
    "black",
    "mypy",
    "ty",
    "pre-commit",
    "pytest",
    "pytest-cov",
]

[tool.ruff]
cache-dir = "./.cache/ruff"
line-length = 120
indent-width = 4
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
#select = ["E", "F", "W", "I", "N", "D", "UP", "B", "A", "C4", "T20", "Q", "RUF"]
select = ["ALL"]
ignore = [
    #### modules
    "ANN", # flake8-annotations
    "COM", # flake8-commas
    "C90", # mccabe complexity
    "DJ",  # django
    "EXE", # flake8-executable
    "T10", # debugger
    "TID", # flake8-tidy-imports

    #### specific rules
    "D100",   # ignore missing docs
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D205",
    "D212",
    "D400",
    "D401",
    "D415",
    "E402",   # false positives for local imports
    "E501",   # line too long
    "TRY003", # external messages in exceptions are too verbose
    "TD002",
    "TD003",
    "FIX002", # too verbose descriptions of todos
    "EM102",
    "S101",
    "PLR2004",
    "G004",
    

]
fixable = ["ALL"]
unfixable = []
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".ui",
    "__pycache__",
    ".env",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.black]
cache-dir = "./.cache/black"
line-length = 120
target-version = ["py313"]
skip-string-normalization = true
include = '\.pyi?$'
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".ui",
    "__pycache__",
    ".env",
]

[tool.mypy]
cache_dir = "./.cache/mypy"
python_version = "3.13"
strict = true
warn_return_any = true
disallow_untyped_defs = true
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".ui",
    "__pycache__",
    ".env",
]

[tool.pytest.ini_options]
cache_dir = "./.cache/pytest"
addopts = "-ra --cov=src --cov-report=html"
testpaths = ["tests"]
