[project]
name = "interface-check"
version = "0.1.0"
description = "Network interface monitoring and traffic testing tool with SSH-based remote management"
authors = [{ name = "Mattias Keva", email = "mattias.keva@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
keywords = ["network", "monitoring", "ssh", "interface", "diagnostics", "iperf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Networking :: Monitoring",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "nicegui==2.24.2",
    "paramiko>=4.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "plotly>=6.5.1",
    "pandas>=2.3.3",
    "psutil>=7.2.1",
    "python-dotenv>=1.2.1",
    "keyboard>=0.13.5",
    "pympler>=1.1",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "types-paramiko>=4.0.0.20250822",
]
build = [
    "pyinstaller>=6.18.0",
]
analysis = [
    "pip-licenses>=5.5.0",
]
scripts = [
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "packaging>=24.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Documentation
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    "D200", "D205", "D212", "D400", "D401", "D415",
    # Complexity and style
    "C90", "PLR2004", "SIM108", "RET504",
    # Performance (acceptable trade-offs)
    "PERF203", "PERF401",
    # Logging and exceptions
    "G004", "TRY003", "EM102",
    # TODOs and fixes
    "TD002", "TD003", "FIX002",
    # Framework specific
    "DJ", "ANN", "COM", "EXE", "T10", "TID",
    # False positives
    "E402", "E501", "S101", "FURB140",
]
fixable = ["ALL"]
unfixable = []
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".ui",
    "__pycache__",
    ".env",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["src"]

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
addopts = "-ra --cov=src --cov-report=html"
testpaths = ["tests"]
